feat: adicionadas funcoes de verificacao de movimento e de vitoria

--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
             <div id = "disc2" data-number="2">2</div>
             <div id = "disc1" data-number="1">1</div>
         </section>
-        <section></section>
-        <section></section>
+        <section id = "column2"></section>
+        <section id = "column3"></section>
     </main>
 
+    <div id = "holder"></div>
+
+    <div id="win"></div>
+    
     <footer>
 
         <p>Feito por Igor e Guilhermino</p>
