feat: adicionado botão para jogar novamente

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Torre de Hanói</title>
 </head>
-<body>
+<body id="body">
 
     <header>
 
@@ -30,7 +30,9 @@
 
     <div id = "holder"></div>
 
-    <div id="win"></div>
+    <div id="win" class="hidden">You win!</div>
+
+    <input id="refresh" type="button" value="Jogar novamente">
     
     <footer>
 
