--- a/index.html
+++ b/index.html
@@ -18,21 +18,25 @@
     </header>
 
     <main>
-        <section id = "column1">
+        <section id = "column1" class="columns" >
             <div id = "disc4" data-number="4">4</div>
             <div id = "disc3" data-number="3">3</div>
             <div id = "disc2" data-number="2">2</div>
             <div id = "disc1" data-number="1">1</div>
         </section>
-        <section id = "column2"></section>
-        <section id = "column3"></section>
+        <section id = "column2" class="columns"></section>
+        <section id = "column3" class="columns"></section>
     </main>
 
     <div id = "holder"></div>
 
-    <div id="win" class="hidden">You win!</div>
+    <section>
+        <div id = "win" class = "hidden">You win!</div>
 
-    <input id="refresh" type="button" value="Jogar novamente">
+        <div id = 'invalid-movement' class = 'hidden'>Movimento inválido!</div>
+
+        <input id="play-again" type="button" value="Jogar novamente">
+    </section>
     
     <footer>
 
