feat: adicionando um contador de movimentos e atualizando as cores do root

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
     </header>
 
+    <div id="moveCount">Contador de movimentos : 0</div>
     <main>
         <section id = "column1" class="columns" >
             <div id = "disc4" data-number="4">4</div>
@@ -24,7 +25,11 @@
             <div id = "disc2" data-number="2">2</div>
             <div id = "disc1" data-number="1">1</div>
         </section>
-        <section id = "column2" class="columns"></section>
+
+        <section id = "column2" class="columns">
+            
+        </section>
+
         <section id = "column3" class="columns"></section>
     </main>
 
