--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 
     </footer>
 
+    <audio controls autoplay volume=0.2 id = "backgroundSound">
+        <source src="yt1s.com - Musica medieval celta flauta doce relaxante instrumental violão.mp3" type="audio/mp3">
+    </audio>
 <script src="script.js"></script>
 </body>
 </html>
