--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <main>
         <section id = "column1" class="columns" >
-            <div id = "disc4" data-number="4">4</div>
-            <div id = "disc3" data-number="3">3</div>
-            <div id = "disc2" data-number="2">2</div>
-            <div id = "disc1" data-number="1">1</div>
+            <div id = "disc4" data-number="4" class="disks">4</div>
+            <div id = "disc3" data-number="3" class="disks">3</div>
+            <div id = "disc2" data-number="2" class="disks">2</div>
+            <div id = "disc1" data-number="1" class="disks">1</div>
         </section>
         <section id = "column2" class="columns"></section>
         <section id = "column3" class="columns"></section>
