fix: Musica arrumada

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     </footer>
 
-    <audio controls autoplay volume=0.2 id = "backgroundSound">
+    <audio controls autoplay id = "backgroundSound">
         <source src="yt1s.com - Musica medieval celta flauta doce relaxante instrumental violão.mp3" type="audio/mp3">
     </audio>
 <script src="script.js"></script>
