fit: arrumando um problema de quebra quando o aviso de movimento invalido aparece

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id = "holder"></div>
 
-    <section>
+    <section class = 'messageSection'>
         <div id = "win" class = "hidden">You win!</div>
 
         <div id = 'invalid-movement' class = 'hidden'>Movimento inválido!</div>
