feat: adicionado texto introdutório e texto de vitória

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
 
         <h1>Torre de Hanói</h1>
+        <h2>A torre da princesa está sob ataque do poderoso dragão Shruikan. Ajude-a desmontando e remontando sua torre em outro lugar!</h2>
     
     </header>
 
@@ -25,7 +26,7 @@
     <div id = "holder"></div>
 
     <section>
-        <div id = "win" class = "hidden">You win!</div>
+        <div id = "win" class = "hidden">Parabéns! Você salvou a torre da princesa!</div>
 
         <div id = 'invalid-movement' class = 'hidden'>Movimento inválido!</div>
 
