fix: mudando estilos da pagina (botao e mensagem de invalidez)

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <header>
 
-        <h1>Torre de Hanói</h1>
+        <h1>Salve a princesa</h1>
     
     </header>
 
-    <div id="moveCount">Contador de movimentos : 0</div>
+    <div id="moveCount">Contador de movimentos : <span id = "moveCountSpan">0</span> </div>
     <main>
         
     </main>
