--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <audio controls autoplay id = "backgroundSound">
         <source src="yt1s.com - Musica medieval celta flauta doce relaxante instrumental violão.mp3" type="audio/mp3">
     </audio>
+    <audio controls id = "errorSound">
+        <source src="yt1s.com - Som de erro.mp3" type="audio/mp3">
+    </audio>
 <script src="script.js"></script>
 </body>
 </html>
