--- a/index.html
+++ b/index.html
@@ -41,9 +41,15 @@
 
     </footer>
 
+    <div id="intro">
+        <span id="text-intro"></span>
+        <button id="botaoIniciar">Iniciar Jogo</button> 
+    </div>
+
     <audio controls autoplay id = "backgroundSound">
         <source src="yt1s.com - Musica medieval celta flauta doce relaxante instrumental violão.mp3" type="audio/mp3">
     </audio>
-<script src="script.js"></script>
+    
+    <script src="script.js"></script>
 </body>
 </html>
