Feat: adicionando linkedn dos participantes

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <footer>
 
         Feito por 
-        <span class = 'blueAnimation'>Igor<i class="fab fa-linkedin-in linkLogo"></i></span>
+        <span class = 'blueAnimation'><a href="https://www.linkedin.com/in/igormgg/">Igor</a><i class="fab fa-linkedin-in linkLogo"></i></span>
         e 
-        <span class = 'blueAnimation'>Guilhermino<i class="fab fa-linkedin-in linkLogo"></i></span> 
+        <span class = 'blueAnimation'> <a href="https://www.linkedin.com/in/guilherminolucas/">Guilhermino</a> <i class="fab fa-linkedin-in linkLogo"></i></span> 
 
     </footer>
 
