fix: adicionado margin ao footer, e mudado o contador de movimentos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     </header>
 
-    <div id="moveCount">Contador de movimentos : <span id = "moveCountSpan">0</span> </div>
+    <div id="moveCount">Movimentos: <span id = "moveCountSpan">0</span> </div>
     <main>
         
     </main>
